[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Character.gd" type="Script" id=1]
[ext_resource path="res://SFX/Hit_Hurt.wav" type="AudioStream" id=2]

[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
albedo_color = Color( 0.815686, 0.133333, 0.133333, 1 )

[sub_resource type="CubeMesh" id=2]
material = SubResource( 1 )
size = Vector3( 0.5, 2, 0.5 )

[sub_resource type="CapsuleShape" id=3]
radius = 0.288642
height = 1.64331

[node name="Character" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0.05, 0 )
shape = SubResource( 3 )

[node name="Forward" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.056, 0.5, -1 )

[node name="CanFire" type="Timer" parent="."]
wait_time = 0.4

[node name="HurtFx" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 2 )
unit_db = 16.842
pitch_scale = 2.59
[connection signal="timeout" from="CanFire" to="." method="_on_CanFire_timeout"]
